[package]
name = "renju_game"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = [
    "process",
    "sync",
    "macros",
    "io-util",
    "rt-multi-thread",
    "fs",
    "time",
] } #https://docs.rs/tokio/1.18.2/tokio/index.html#feature-flags
tokio-util = { version = "0.7.2", features = ["io"] }

bytemuck = "1.12.1"
regex = "1.6.0"
tensorflow = { path = "./tensorflow/rust", features = ["ndarray"] }
tensorflow-sys = { path = "./tensorflow/rust/tensorflow-sys", features = [
    "runtime_linking",
] }


ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false, features = [
    "accelerate",
] }
# BLAS source choices:
# accelerate, which is the one in the Accelerate framework (macOS only),
# blis, which is the one in BLIS,
# intel-mkl, which is the one in Intel MKL,
# netlib, which is the reference one by Netlib, and
# openblas, which is the one in OpenBLAS.

rayon = "1.5.3"
rand = "0.8.5"
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
rusqlite = { version = "0.28.0", features = ["bundled", "backup"] }


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
