[package]
name = "renju"
version = "0.1.0"
edition = "2021"
authors = ["Jerry.Wang", "vcer@qq.com"]
homepage = "https://github.com/wangjia184/renju"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1.21.0", features = [
    "full",
] } #https://docs.rs/tokio/1.18.2/tokio/index.html#feature-flags
tokio-util = { version = "0.7.4", features = ["full"] }
futures-util = { version = "0.3.24" }
futures = "0.3.24"
bytemuck = "1.12.1"
regex = "1.6.0"
bytes = "1.2.1"
bincode = "1.3.3"
serde_json = "1.0"
serde-pickle = "1.1.1"
serde = { version = "1.0.144", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
pyo3 = { version = "0.17.1", features = [] }
num_cpus = "1.13.1"
crossbeam = "0.8.2"
flume = "0.10.14"
lazy_static = "1.4.0"
tflitec = { version = "0.5.1", features = ["xnnpack"] }
rand = "0.8.5"
rand_distr = "0.4.3"
probability = "0.18.0"
unsafe-send-sync = "0.1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
tauri-build = { version = "1.1.1" }
copy_to_output = "2.0.0"
bindgen = "0.61.0"
build-target = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]


# BLAS source choices:
# accelerate, which is the one in the Accelerate framework (macOS only),
# blis, which is the one in BLIS,
# intel-mkl, which is the one in Intel MKL,
# netlib, which is the reference one by Netlib, and
# openblas, which is the one in OpenBLAS.
[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false, features = [
    "accelerate",
] }


[target.'cfg(target_os = "windows")'.dependencies]
ndarray = { version = "0.15.6" }
widestring = "1.0.2"

#[profile.release]
#strip = true      # Automatically strip symbols from the binary.
#opt-level = "z"   # Optimize for size.
#lto = true
#codegen-units = 1
