[package]
name = "renjuai"
version = "0.1.0"
authors = ["jerry.wang <vcer@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wee_alloc = "0.4.5"
js-sys = "0.3.60"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
bytemuck = "1.12.3"
wasm-bindgen-futures = "0.4.33"
crossbeam = "0.8.2"
async-oneshot = "0.5.0"
async-lock = "2.6.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-args=-z stack-size=20000000"]
